--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
         "core-js": "3.26.1",
         "@vue/compiler-sfc":"3.2.45",
         "@vue/cli-service":"5.0.8"
+    },
+    "scripts": {
+        "serve": "vue-cli-service serve"
     }
 }
